--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Latihan Git</title>
 </head>
 <body>
+   <p> Aku belajar git</p>
+
+    <p>Aku maubelajar push</p>
     
 </body>
 </html>
